--- a/contact.html
+++ b/contact.html
@@ -117,6 +117,18 @@
         La Jolla, CA (USA)<br>
         e-mail: hkcarter@ucsd.edu<br><br>
       </td></tr>
+       <tr>
+      <td valign=top>
+        <img height="110" src="img/julien.png"> &nbsp;  &nbsp;
+      </td>
+      <td>
+      <p class="text">
+      <span style="color:#d97b2d;font-weight:400;">Julien Gagneur</span><br>
+        Computational Molecular Medicine<br>
+        Technische Universität München<br>
+        Munich, (Germany)<br>
+        e-mail: gagneur@in.tum.de<br><br>
+      </td></tr>
 
       <tr>
       <td valign=top>
