--- a/publication.html
+++ b/publication.html
@@ -94,8 +94,14 @@
     <td valign=top>
     In the previous editions of the VarI-COSI the organizers invited the authors of the presented papers and strong posters
     to submit their work for the next special issue publication. The selected manuscripts have been published in the
-    following BioMed Central journals.
+    following BioMed Central and MDPI journals.
     <br><br>
+      <ul>
+    <li><span style="color:#d97b2d;font-weight:400;">VarI-COSI 2022</span>
+            special issue published on the
+            <a href="https://www.mdpi.com/journal/ijms/special_issues/W001S2SZ95" target=_blank>
+            International Journal of Molecular Sciences</a>
+    </ul>
       <ul>
       <li><span style="color:#d97b2d;font-weight:400;">VarI-COSI 2016</span>
           special issue published on
