--- a/schedule.html
+++ b/schedule.html
@@ -83,14 +83,14 @@
   	<br>
 
      <div class="text">
-     <h4 class="title" >VarI COSI 2022</h4>
+     <h4 class="title" >VarI COSI 2023</h4>
      </div>
 
   <div class="text">
     <p class="text">
-      <span style="color:#d97b2d;font-weight:400;">What:</span> Variant Interpretation Session at the Virtual ISMB 2022<br>
-      <span style="color:#d97b2d;font-weight:400;">When:</span> 10:30 - 18:00 CDT, 12 July 2022</b> <br>
-      <span style="color:#d97b2d;font-weight:400;">Where:</span> Room FI Convention Center - Madison (WI), USA and Online Meeting.
+      <span style="color:#d97b2d;font-weight:400;">What:</span> Variant Interpretation Session at the ISMB/ECCB 2023<br>
+      <span style="color:#d97b2d;font-weight:400;">When:</span> 8:30 - 16:30 CEST, 27 July, 2023.</b> <br>
+      <span style="color:#d97b2d;font-weight:400;">Where:</span>  Convention Center, Salle Rhone 1 - Lyon, France and Online Meeting.
     </p>
 
     <table  border="0"  cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" >
@@ -108,7 +108,7 @@
         <br><br></span></td>
       </tr>
       <tr>
-      <td><span><p class="text-small"> <strong>January 24, 2022</strong><br>&nbsp;</span></td> 
+      <td><span><p class="text-small"> <strong>January 24, 2022</strong><br>&nbsp;</span></td>
       <td><span><p class="text-small"> Call for Abstracts Opens <br>&nbsp; </span></td>
       </tr>
       <tr>
@@ -142,7 +142,7 @@
 --->
 
       <tr>
-        
+
         <td colspan="2"><span><p class="text-small"><br><br><strong>
               <img src="/img/PU.gif" width="12" height="12"> Session 1
 <!-- Tuesday July 12, 2022
@@ -154,34 +154,106 @@ Annotation and prediction of structural/functional impacts of genetic variants.
         <br><br></span></td>
       </tr>
       <tr>
-        <td><span><p class="text-small"> <strong>10:30 - 10:40</strong><br>&nbsp;</span></td>
+        <td><span><p class="text-small"> <strong>8:30 - 8:40</strong><br>&nbsp;</span></td>
         <td><span><p class="text-small"> Opening remarks<br>&nbsp; </span></td>
+      </tr>
+      <tr>
+        <td><span><p class="text-small"><strong>8:40 - 8:50</strong><br>&nbsp;</span></td>
+        <td><span><p class="text-small">
+        <u>Yazdan Asgari.</u> Paris-Saclay University, Paris-Sud University, Gustave Roussy, Villejuif, France.
+          <br><i>
+          Developing a new pipeline for exploring pleiotropy of GWAS data at gene-level.
+          </i>
+      </span></td>
       </tr>
 
       <tr>
-        <td><span><p class="text-small"><strong>10:40 - 11:20</strong><br>&nbsp;</span></td>
+        <td><span><p class="text-small"><strong>8:50 - 9:30</strong><br>&nbsp;<br>&nbsp;</span></td>
         <td><span><p class="text-small"><strong>Keynote talk:</strong>
 
-        <a href="https://humantechnopole.it/en/people/nicole-soranzo/" target=blank><strong>Nicole Soranzos</strong></a>.
-        Human Technopole, Milano, Italy.
+        <a href="https://www.iarc.who.int/staff_member/matthieu-foll/" target=blank>
+          <strong>Matthieu Foll</strong></a>.
+        International Agency for Research on Cancer, Lyon, France.
         <br>
         <i>
-         High-resolution genomic analyses in human populations
-        </i>
+         Multi-omics characterization of rare heterogeneous tumors.
+        </i><br>&nbsp;
         </span></td>
-   </tr>
+        </tr>
+
+              <tr>
+              <td><span><p class="text-small"><strong>9:30 - 10:00</strong><br>&nbsp;
+              </span></td><td><span><p class="text-small"><b>Coffee Break</b><br>&nbsp;</span></td>
+              </tr>
 
       <tr>
-
-        <td><span><p class="text-small"><strong>11:20 - 11:30</strong><br>&nbsp
+        <td><span><p class="text-small"><strong>10:00 - 10:10</strong><br>&nbsp
         </span></td>
         <td><span><p class="text-small"><span><p class="text-small">
-
-        <u>Leonardo Pellegrina,.</u> University of Padova,  Padova, Italy.  <br><i>
-        Discovering significant evolutionary trajectories in cancer phylogenies
-.</i>
-
+        <u>Vaishali Waman.</u> University College London, London, United Kingdom.  <br><i>
+        Predicting human and viral protein variants affecting COVID-19 susceptibility.</i>
         </span></td>
+      </tr>
+      <tr>
+        <td><span><p class="text-small"><strong>10:10 - 10:30</strong><br>&nbsp
+        </span></td>
+        <td><span><p class="text-small"><span><p class="text-small">
+        <u>Kivilcim Ozturk.</u> University of California San Diego, La Jolla (CA), USA.  <br><i>
+        Interface-guided phenotyping of coding variants.</i>
+        </span></td>
+      </tr>
+
+      <tr>
+        <td><span><p class="text-small"><strong>10:30 - 10:40</strong><br>&nbsp<br>&nbsp
+        </span></td>
+        <td><span><p class="text-small"><span><p class="text-small">
+        <u>Swatantra Pradhan.</u> Tata Consultancy Services, India.  <br><i>
+        An augmented transformer model trained on family specific variant data leads to improved prediction of variants<br>
+        of uncertain significance.</i>
+        </span></td>
+      </tr>
+
+      <tr>
+        <td><span><p class="text-small"><strong>10:40 - 10:50</strong><br>&nbsp;<br>&nbsp;</span></td>
+        <td><span><p class="text-small">
+        <u>Nigreisy Montalvo.</u> Imagine Institute, Paris, France.
+          <br><i>
+          Pathogenicity scoring of genetic variants through federated learning across independent institutions reaches
+          <br>comparable or superior performance than the centralized-data model counterparts.
+          </i>
+      </span></td>
+      </tr>
+      <tr>
+        <td><span><p class="text-small"><strong>10:50 - 11:00</strong><br>&nbsp
+        </span></td>
+        <td><span><p class="text-small"><span><p class="text-small">
+        <u>Julian Gough.</u> MRC Laboratory of Molecular Biology, United Kingdom.<br><i>
+        Hypothesis-free phenotype prediction within a genetics-first framework.</i>
+        </span></td>
+      </tr>
+
+      <tr>
+        <td><span><p class="text-small"><strong>11:00 - 11:20</strong><br>&nbsp
+        </span></td>
+        <td><span><p class="text-small"><span><p class="text-small">
+        <u>Alexander Schoenhuth.</u> Bielefeld University, Germany.<br><i>
+        Predicting the prevalence of complex genetic diseases from individual
+        genotype profiles using capsule networks.</i>
+        </span></td>
+      </tr>
+
+      <tr>
+        <td><span><p class="text-small"><strong>11:20 - 12:00</strong><br>&nbsp;<br>&nbsp;</span></td>
+        <td><span><p class="text-small"><strong>Keynote talk:</strong>
+
+        <a href="https://menchelab.com/joerg-menche" target=blank>
+          <strong>Jörg Menche</strong></a>.
+        University of Vienna, Austria
+        <br>
+        <i>
+         Network Medicine – From protein-protein to human-machine interactions.
+        </i>
+        <br>&nbsp;</span></td>
       </tr>
 <!--
       <tr>
@@ -190,51 +262,16 @@ Annotation and prediction of structural/functional impacts of genetic variants.
       </tr>
 -->
 
-<tr>
-        <td><span><p class="text-small"><strong>11:30 - 11:40</strong><br>&nbsp;</span></td>
-        <td><span><p class="text-small">
-
-        <u>Xiaolei Zhang.</u>Imperial College London, United Kingdom.
-        <br><i>i
-        Genetic constraint at single amino acid resolution improves missense variant prioritisation and gene discovery.
-        </i>
-</span></td>
-
-      </tr>
-      <tr>
-        <td><span><p class="text-small"><strong>11:40 - 11:50</strong><br>&nbsp;</span></td>
-        <td><span><p class="text-small">
-
-        <u>Shaolei Teng.</u>  Howard University, Rockville (MD), USA.
-  <br><i>
-Systematic investigation of missense mutations of coronavirus spike and human receptor proteins.
-        </i>
-
-        </span></td>
-      </tr>
-
-
-            <tr>
-              <td><span><p class="text-small"><strong>11:50 - 12:30</strong><br>&nbsp;<br>&nbsp;</span></td>
-              <td><span><p class="text-small"><strong>Keynote talk:</strong>
-
-              <a href="https://www.gla.ac.uk/researchinstitutes/iii/staff/davidrobertson/" target=blank><strong>David Robertson</strong></a>.
-              University of Glasgow, Glasgow, UK.
-              <br>
-               Evolution of SARS-CoV-2 variants: past, present and future.
-              </i>
-              <br>&nbsp;
-              </span></td>
          </tr>
 
          <tr>
-         <td><span><p class="text-small"><strong>12:30 - 14:30</strong><br>&nbsp;</span></td>
-         <td><span><p class="text-small"><b>Lunch break and poster session</b><br>&nbsp;</span></td>
+         <td><span><p class="text-small"><strong>12:00 - 13:20</strong><br>&nbsp;</span></td>
+         <td><span><p class="text-small"><b>Lunch break</b><br>&nbsp;</span></td>
          </tr>
 
 <tr>
         <td colspan="2"><span><p class="text-small"><strong><br />
-            
+
               <img src="/img/PU.gif" alt="" width="12" height="12" />
               Session 2
 
@@ -250,50 +287,67 @@ Genetic variants as effectors of change: disease and evolution. <br />
         </tr>
 
 
-      <tr>
-        <td><span><p class="text-small"><strong>14:30 - 14:40</strong><br>&nbsp;</span></td>
-        <td><span><p class="text-small">
+        <tr>
+                <td><span><p class="text-small"><strong>13:20 - 13:40</strong><br>&nbsp;</span></td>
+                <td><span><p class="text-small">
 
-        <u>John Moult.</u>  University of Maryland, Rockville (MD) USA.
-  <br><i>
-       Lessons learned from 10 years of CAGI experiments.
-        </i>
+                <u>Rongting Huang</u>. The University of Hong Kong, Hong Kong.
+                <br><i>
+                XClone: detection of allele-specific subclonal copy number
+                variations from single-cell transcriptomic data.</i>
+              </span></td>
+        </tr>
+
+        <tr>
+                <td><span><p class="text-small"><strong>13:40 - 14:00</strong><br>&nbsp;<br>&nbsp;</span></td>
+                <td><span><p class="text-small">
+
+                <u>David Wang</u>. University of Pennsylvania, Philadelphia (PA) USA.
+                <br><i>
+              Comprehensive Identification and Characterization of Splicing Associated
+              Variants with Coverage Aware<br>
+              Statistical Models.</i>
+              </span></td>
+        </tr>
+
+        <tr>
+                <td><span><p class="text-small"><strong>14:00 - 14:10</strong><br>&nbsp;<br>&nbsp;</span></td>
+                <td><span><p class="text-small">
+
+                <u>Nina Baumgarten</u>. Goethe University, Frankfurt am Main, Germany.
+                <br><i>
+                  A statistical approach to identify regulatory DNA variations
+                  combined with epigenomics data reveals novel<br>
+                  non-coding disease genes.</i>
+              </span></td>
+        </tr>
+
+        <tr>
+                <td><span><p class="text-small"><strong>14:10 - 14:20</strong><br>&nbsp;</span></td>
+                <td><span><p class="text-small">
+
+                <u>Eleni Giannoulatou</u>. Victor Chang Cardiac Research Institute, Sydney (NSW), Australia.
+                <br><i>
+                  SpliceSM: machine learning discovery of splice-altering
+                  variants using susceptibility maps.</i>
+              </span></td>
+        </tr>
+
+        <tr>
+          <td><span><p class="text-small"><strong>14:20 - 15:00</strong><br>&nbsp;</span></td>
+        <td><span><p class="text-small"><strong>Keynote talk:</strong>
+
+      <a href="https://www.well.ox.ac.uk/people/nicola-whiffin"target=blank><strong>Nicky Whiffin</strong></a>.
+        University of Oxford, Oxford, United Kingdom.
+        <br>
+         <i>
+        Strategies to annotate and interpret non-coding variants in rare disease.
+         </i>
 
         </span></td>
       </tr>
-      <tr>
-        <td><span><p class="text-small"><strong>14:40 - 14:50</strong><br>&nbsp;</span></td>
-        <td><span><p class="text-small">
 
-        <u>Alessia David.</u>   Imperial College London, London UK. <br><i>
-        Missense3D-PPI: a structure-based prediction algorithm of the impact of missense variants at protein interfaces.
-        </i>
-
-        </span></td>
-      </tr>
-
-      <tr>
-        <td><span><p class="text-small"><strong>14:50 - 15:00</strong><br>&nbsp;</span></td>
-        <td><span><p class="text-small">
-
-        <u>Kivilcim Ozturk.</u>  University of California  San Diego, La Jolla (CA), USA. <br><i>
-        Predicting functional consequences of mutations using molecular interaction network features.
-        </i>
-
-        </span></td>
-      </tr>
-
-      <tr>
-        <td><span><p class="text-small"><strong>15:00 - 15:10</strong><br>&nbsp;</span></td>
-        <td><span><p class="text-small">
-
-        <u>Emidio Capriotti.</u>  University of Bologna, Bologna, Italy. <br><i>
-	   Evaluating the relevance of sequence conservation in the prediction of pathogenic missense variants.
- <br>
-        </i>
-
-        </span></td>
-      </tr>
+<!--
 <tr>
              <td><span><p class="text-small"><strong>15:10 - 15:30</strong><br>&nbsp;</span></td>
              <td><span><p class="text-small"><b>VarI sponsor:</b>
@@ -304,48 +358,54 @@ Genetic variants as effectors of change: disease and evolution. <br />
      </i>
              </span></td>
            </tr>
+-->
+
 
 	     <tr>
-             <td><span><p class="text-small"><br><strong>15:30 - 16:00</strong><br>&nbsp;</span></td>
+             <td><span><p class="text-small"><br><strong>15:00 - 15:30</strong><br>&nbsp;</span></td>
              <td><span><p class="text-small"><br><b>Coffee Break</b><br>&nbsp;</span></td>
              </tr>
 
 
          <tr>
-                <td><span ><p class="text-small"><strong>16:00 - 16:20</strong><br>&nbsp;</span></td>
+                <td><span ><p class="text-small"><strong>15:30 - 15:50</strong><br>&nbsp;<br>&nbsp;</span></td>
                 <td><span ><p class="text-small"><strong>Proceedings Talk:</strong>
 
-                          <u>Joanna von Berg.</u> University Medical Center Utrecht, Netherlands.
+                          <u>Yasser Mohseni Behbahani</u>. Sorbonne Université,
+                          Paris, France.
                 <br><i>
-                 PolarMorphism enables discovery of shared genetic variants across multiple traits from GWAS summary statistics.
-
+                  Deep Local Analysis deconstructs protein - protein interfaces and accurately estimates binding affinity<br>changes upon mutation.
                 </span></td>
               </tr>
 
-        <tr>
-          <td><span><p class="text-small"><strong>16:20 - 17:00</strong><br>&nbsp;</span></td>
-        <td><span><p class="text-small"><strong>Keynote talk:</strong>
 
-      <a href="https://genetics.wisc.edu/staff/sharp-nathaniel/"target=blank><strong>Nathaniel Sharp</strong></a>.
-        University of Wisconsin, MAdison (WI), USA.
-        <br>
-         <i>
-        Yeast experiments provide insight into the molecular causes and phenotypic consequences of spontaneous mutations
-         </i>
-
-        </span></td>
-      </tr>
 
    <tr>
-      <td><span><p class="text-small"><strong>17:00 - 17:10</strong><br>&nbsp;<br>&nbsp;</span></td>
+      <td><span><p class="text-small"><strong>15:50 - 16:10</strong><br>&nbsp;<br>&nbsp;</span></td>
         <td><span><p class="text-small">
-
-          <u>Vikas Pejaver.</u> Icahn School of Medicine at Mount Sinai, New York (NY), USA.
+          <u>Jayoung Ryu</u>. Harvard Medical School, Boston (MA), USA.
           <br>
-
           <i>
-          Evidence-based calibration of computational tools for missense variant pathogenicity classification and ClinGen<br>recommendations for their clinical use.
+          Modeling endogenous editing outcome of base editor
+          reporter screens with CRISPR-Bean discovers causal<br>
+          variants for cellular LDL uptake.
         </i>
+
+        <tr>
+           <td><span><p class="text-small"><strong>16:10 - 16:20</strong><br>&nbsp;<br>&nbsp;</span></td>
+             <td><span><p class="text-small">
+
+               <u>Daniele Raimondi</u>. KU Leuven, Leuven, Belgium.
+               <br>
+               <i>
+                 From genotype to phenotype in Arabidopsis thaliana:
+                 in-silico genome interpretation predicts 288 phenotypes<br>
+                 from sequencing data.
+             </i>
+
+
+             </span></td>
+           </tr>
 
 
         </span></td>
@@ -353,43 +413,8 @@ Genetic variants as effectors of change: disease and evolution. <br />
       <tr>
 
 
-         <tr>
-                <td><span ><p class="text-small"><strong>17:10 - 17:30</strong><br>&nbsp;</span></td>
-                <td><span ><p class="text-small">
-
-                          <u>Farica Zhuang.</u> University of Pennsylvania, Philadelphia (PA), USA. 
-                <br><i>
-		Mapping the human RNA G-Quadruplexes and genetic variants that affect them using Transformer based modeling.
-                </span></td>
-              </tr>
-
-        <tr>
-          <td><span><p class="text-small"><strong>17:30 - 17:40</strong><br>&nbsp;<br>&nbsp;</span></td>
-          <td><span><p class="text-small">
-            <u>Blythe Moreland.</u>, The Institute for Genomic Medicine, Nationwide Children's Hospital, Columbus (OH), USA.
-          <br>
-          <i>
-          Information theoretic analysis of synonymous codon usage offers context-dependent metric to assess constraint <br>on synonymous variants.
-          </i>
-          </span></td>
-
-        </tr>
-
-        <tr>
-          <td><span><p class="text-small"><strong>17:40 - 18:00</strong><br>&nbsp;</span></td>
-          <td><span><p class="text-small">
-            <u>Michal Linial.</u> The Hebrew University of Jerusalem, Jerusalem, Israel.
-          <br>
-          <i>
-          Hypertension Genetics is Sex-dependent.
-          </i>
-          </span></td>
-
-        </tr>
-
-
       <tr>
-        <td><span><p class="text-small"><br><strong>18:00 - 18:05</strong></span></td>
+        <td><span><p class="text-small"><br><strong>16:20 - 16:30</strong></span></td>
         <td><span><p class="text-small"><br>Closing remarks.</span></td>
       </tr>
 
