--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
       </div>
       <p class="text">
       <span style="color:#d97b2d;font-weight:400;">What:</span> Variant Interpretation Session at the
-      <a href="https://www.iscb.org/ismb2022" target=_blank>ISMB 2022</a> Meeting<br>
-      <span style="color:#d97b2d;font-weight:400;">When:</span> 10:30 - 18:00 CDT, 12 July, 2022.<br>
-      <span style="color:#d97b2d;font-weight:400;">Where:</span> Room FI Convention Center - Madison (WI), USA and  Online Meeting.<br><br>
+      <a href="https://www.iscb.org/ismbeccb2023" target=_blank>ISMB/ECCB 2023</a> Meeting<br>
+      <span style="color:#d97b2d;font-weight:400;">When:</span> 8:30 - 16:30 CEST, 27 July, 2023.<br>
+      <span style="color:#d97b2d;font-weight:400;">Where:</span> Convention Center, Salle Rhone 1 - Lyon, France and Online Meeting.<br><br>
      <div class="text">
      <h4 class="title" >Aims</h4>
      </div>
@@ -102,7 +102,8 @@
     The primary goal of the ISCB Variant Interpretation (VarI) community of special interest (COSI) is to outline and discuss
     the recent advances in the methodology for the annotation and  analysis of genetic variants. Building upon the experience of
     the previous VarI and SNP COSI editions
-   (<a href='pages/vari-2021.html'>Online 2021</a>,
+   (<a href='pages/vari-2022.html'>Madison 2022</a>,
+    <a href='pages/vari-2021.html'>Online 2021</a>,
     <a href='pages/vari-2020.html'>2020</a>,
     <a href='pages/vari-2019.html'>Basel 2019</a>,
     <a href='pages/vari-2018.html'>Chicago 2018</a>,
