--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
       </div>
       <p class="text">
       <span style="color:#d97b2d;font-weight:400;">What:</span> Variant Interpretation Session at the
-      <a href="https://www.iscb.org/ismbeccb2023" target=_blank>ISMB/ECCB 2023</a> Meeting<br>
-      <span style="color:#d97b2d;font-weight:400;">When:</span> 8:30 - 16:30 CEST, 27 July, 2023.<br>
-      <span style="color:#d97b2d;font-weight:400;">Where:</span> Convention Center, Salle Rhone 1 - Lyon, France and Online Meeting.<br><br>
+      <a href="https://www.iscb.org/ismb2024" target=_blank>ISMB 2024</a> Meeting<br>
+      <span style="color:#d97b2d;font-weight:400;">When:</span> 15 July, 2024.<br>
+      <span style="color:#d97b2d;font-weight:400;">Where:</span> Montreal (Canada).<br><br>
      <div class="text">
      <h4 class="title" >Aims</h4>
      </div>
@@ -102,7 +102,8 @@
     The primary goal of the ISCB Variant Interpretation (VarI) community of special interest (COSI) is to outline and discuss
     the recent advances in the methodology for the annotation and  analysis of genetic variants. Building upon the experience of
     the previous VarI and SNP COSI editions
-   (<a href='pages/vari-2022.html'>Madison 2022</a>,
+   (<a href='pages/vari-2023.html'>Lyon 2023</a>,
+    <a href='pages/vari-2022.html'>Madison 2022</a>,
     <a href='pages/vari-2021.html'>Online 2021</a>,
     <a href='pages/vari-2020.html'>2020</a>,
     <a href='pages/vari-2019.html'>Basel 2019</a>,
@@ -129,14 +130,12 @@
     but not limited to "genetic variants in": sequence analysis, protein structure and function,
     protein interactions and molecular networks, transcriptomics and gene regulation, disease models and epidemiology,
     population genetics and evolution, comparative genomics. 
-    <!--
-     Abstracts and posters can be submitted through the following
-     link
+    
+    Abstracts and posters can be submitted through the following link.
      <br><br>
      <center>
-     <a href="https://easychair.org/my/conference?conf=ismbeccb2021abstracts#" target=_blank><img height="22" src="img/submit.png"></a>
+     <a href="https://easychair.org/conferences/submissions?a=32184135" target=_blank><img height="22" src="img/submit.png"></a>
      </center>
-    -->
     </td></tr>
     </tbody>
     </table>
